--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -33,7 +33,7 @@
         // This is the idiomatic way to ensure that JQuery does not
         // execute until the page has loaded
         $(function(){
-            const api = ""; // <- do not need a root api URL if this page is served directly by the API
+            const api = "http://localhost:8080"; // <- do not need a root api URL if this page is served directly by the API
 
             $.getJSON(api+"/receipts", function(receipts){
                 for(var i=0; i < receipts.length; i++) {
